--- a/Timer2/app/src/main/res/layout/sequence_item.xml
+++ b/Timer2/app/src/main/res/layout/sequence_item.xml
@@ -18,8 +18,17 @@
         android:text="@string/delete" />
 
     <Button
-        android:id="@+id/more_detail_sequence_button"
+        android:id="@+id/change_sequence_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/change" />
+
+    <Button
+        android:id="@+id/timers_page_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:text="..." />
+
+
 </LinearLayout>
